--- a/style.css
+++ b/style.css
@@ -4,14 +4,12 @@ html {
     height: 100%;
 }
 
-
 body {
     min-height: 100vh;
     width: 100%;
     background: rgb(238,174,202);
     background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
 }
-
 
 #main-container {
     display: flex;
@@ -30,4 +28,75 @@ body {
     justify-content: center;
     font-size: 2.5rem;
     color: white;
+}
+
+#calculator-container {
+    display: grid;
+    justify-content: center;
+    align-content: center;
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+    grid-template-rows: 30px minmax(100px, auto) repeat(5, minmax(80px, 1fr));
+    width: 35%;
+    border: 2px solid white;
+    border-bottom: 1px solid white;
+    border-radius: 2px;
+}
+
+#calculator-header {
+    grid-column: 1 / -1;
+    background-color: rgba(0, 0, 0, 0.55);
+    color: white;
+    font-size: 1.4rem;
+    padding-top: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border: none;
+}
+
+.material-symbols-outlined {
+    font-variation-settings:
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 48
+  }
+
+#display {
+    grid-column: 1 / -1;
+    display: flex;
+    background-color: rgba(0, 0, 0, 0.55);
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-end;
+    padding: 10px;
+    word-wrap: break-word;
+    word-break: break-all;
+    color: white;
+    border-bottom: 2px solid white;
+}
+
+#current-display {
+    font-size: 2.5rem;
+    color: white;
+}
+
+#previous-display {
+    font-size: 1.5rem;
+    color: rgba(255, 255, 255, 0.7);
+}
+
+#calculator-container > button {
+    cursor: pointer;
+    outline: none;
+    font-size: 2rem;
+    background-color: rgba(255, 255, 255, 0.5);
+    border: 1px solid white;
+    color: cornflowerblue;
+}
+
+#calculator-container button:hover {
+    background-color: rgba(255, 255, 255, 0.9);
 }
