--- a/style.css
+++ b/style.css
@@ -100,3 +100,24 @@ body {
 #calculator-container button:hover {
     background-color: rgba(255, 255, 255, 0.9);
 }
+
+#footer {
+    background-color: inherit;
+    height: 10vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2rem;
+    color: white;
+
+}
+
+.fa-github {
+    color: white;
+    transition: transform 0.3s ease-in-out;
+}
+
+.fa-github:hover {
+    transform: scale(1.2) rotate(360deg);
+}
