--- a/style.css
+++ b/style.css
@@ -121,3 +121,78 @@ body {
 .fa-github:hover {
     transform: scale(1.2) rotate(360deg);
 }
+
+
+/* MEDIA QUERIES */
+
+/* Large Screens */
+@media screen and (min-width: 1430px) {
+    #calculator-container {
+      grid-template-rows: 30px minmax(140px, auto) repeat(5, minmax(110px, 1fr));
+    }
+
+    #footer {
+        font-size: 3.5rem;
+    }
+
+    #calculator-container > button {
+        font-size: 3rem;
+    }
+
+    #current-display {
+        font-size: 3.5rem;
+    }
+
+    #previous-display {
+        font-size: 2.5rem;
+    }
+}
+
+/* Tablets */
+@media screen and (max-width: 990px) {
+    #calculator-container {
+      width: 60%;
+      grid-template-rows: 30px minmax(120px, auto) repeat(5, minmax(100px, 1fr));
+    }
+
+    #footer {
+        font-size: 2.5rem;
+    }
+
+    #calculator-container > button {
+        font-size: 2.5rem;
+    }
+
+    #current-display {
+        font-size: 3rem;
+    }
+
+    #previous-display {
+        font-size: 2rem;
+    }
+    
+}
+
+/* Mobile Phones */
+@media screen and (max-width: 550px) {
+    #calculator-container {
+      width: 96%;
+      grid-template-rows: 30px minmax(130px, auto) repeat(5, minmax(90px, 1fr));
+    }
+
+    #header {
+        height: 7vh;
+    }
+
+    #footer {
+        font-size: 2.2rem;
+    }
+
+    #current-display {
+        font-size: 3rem;
+    }
+
+    #previous-display {
+        font-size: 2rem;
+    }
+}
