--- a/style.css
+++ b/style.css
@@ -235,3 +235,10 @@ body {
         font-size: 2rem;
     }
 }
+
+
+@media (pointer: coarse) {
+    #calculator-container button:hover {
+        background-color: rgba(255, 255, 255, 0.5);
+    }
+}
